--- a/app/src/main/res/layout/thread_fragment.xml
+++ b/app/src/main/res/layout/thread_fragment.xml
@@ -52,6 +52,13 @@
             android:layout_marginTop="@dimen/margin_5_dp"
             android:text="@string/calc_in_thread"
             android:textSize="@dimen/feels_like_text_size" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/calcThreadHandler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5_dp"
+            android:text="@string/handler_thread"
+            android:textSize="@dimen/feels_like_text_size" />
     </LinearLayout>
 </ScrollView>
 
